--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,7 +5,7 @@
     <div class="page-banner-container">
         <div class="page-banner-content-container">
             <img class="page-banner__image" src="../assets/images/c1.jpg">
-            <h2 class="page-banner__header">عن البوابة</h2>
+            <h2 class="page-banner__header">{{'aboutPortal' | translate }}</h2>
         </div>
     </div>
 </div>
@@ -55,12 +55,12 @@
     <!--Footer Site map -->
     <div class="site-map-container ">
         <ul class="site-map-list">
-            <li class="site-map-tab"><a href="#">الصفحة الرئيسية</a></li>
-            <li class="site-map-tab"><a href="#">عن البوابة </a></li>
-            <li class="site-map-tab"><a href="#">الاقسام الصناعية</a></li>
-            <li class="site-map-tab"><a href="#">الرعاة المشاركون</a></li>
-            <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
-            <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
+            <li class="site-map-tab"><a href="#">{{'homePage' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'About' | translate}} </a></li>
+            <li class="site-map-tab"><a href="#">{{'IndustrialDepartments' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'sponsors' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'AddFactory' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'ContactUs'| translate}}</a></li>
         </ul>
     </div>
     <!--Footer Contact info-->
