--- a/src/app/pages/add-factory/add-factory.component.html
+++ b/src/app/pages/add-factory/add-factory.component.html
@@ -4,7 +4,7 @@
     <div class="page-banner-container">
         <div class="page-banner-content-container">
             <img class="page-banner__image" src="../assets/images/c1.jpg">
-            <h2 class="page-banner__header">عن البوابة</h2>
+            <h2 class="page-banner__header">{{'AddFactory'|translate}}</h2>
         </div>
     </div>
 </div>
@@ -18,26 +18,26 @@
                 <!-- اسم الشركة / المصنع-->
                  <div class="input-form">
                     <label class="input-form__label" for="Factoryname-arabic">
-                        اسم الشركة / المصنع
+                       {{'factory.nameHeader' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="Factoryname-arabic" placeholder="اسم الشركة / المصنع باللغة العربية">
-                    <input type="text" class="input-form__txt" id="Factoryname-english" placeholder="اسم الشركة / المصنع باللغة الانجليزية">
+                    <input type="text" class="input-form__txt" id="Factoryname-arabic" placeholder="{{'factory.arabicName' | translate}}">
+                    <input type="text" class="input-form__txt" id="Factoryname-english" placeholder="{{'factory.englishName' | translate}}">
 
                 </div> 
 
                 <!--عن الشركة / المصنع-->
                  <div class="input-form">
                     <label class="input-form__label" for="about-Factory-arabic">
-                        عن الشركة / المصنع
+                       {{'factory.aboutHeader' | translate}}
                     </label>
-                    <textarea type="text" class="input-form__txt" id="about-Factory-arabic" placeholder="نبذة عن الشركة / المصنع باللغة العربية"></textarea>
-                    <textarea type="text" class="input-form__txt" id="about-Factory-english" placeholder="نبذة عن الشركة / المصنع باللغة الانجليزية"></textarea>
+                    <textarea type="text" class="input-form__txt" id="about-Factory-arabic" placeholder="{{'factory.aboutArabic' | translate}}"></textarea>
+                    <textarea type="text" class="input-form__txt" id="about-Factory-english" placeholder="{{'factory.aboutEnglish'| translate}}"></textarea>
                 </div> 
 
                 <!--نوع القطاع-->
                  <div class="input-form position-relative">
                     <label class="input-form__label select__label" for="Factory-sector">
-                        نوع القطاع
+                        {{'factory.sectorTypeHeader' | translate}}
                     </label>
                     <select  class="input-form__select" id="Factory-sector" >
                         <option value="قطاع صناعي">قطاع صناعي</option>
@@ -50,69 +50,69 @@
                 <!--  العنوان-->
                  <div class="input-form">
                     <label class="input-form__label" for="Factory-address-arabic">
-                        العنوان
+                       {{'factory.address' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="Factory-address-arabic" placeholder="العنوان باللغة العربية">
-                    <input type="text" class="input-form__txt" id="Factory-address-english" placeholder="العنوان باللغة الانجليزية">
+                    <input type="text" class="input-form__txt" id="Factory-address-arabic" placeholder="{{'factory.arabicAddress'|translate}}">
+                    <input type="text" class="input-form__txt" id="Factory-address-english" placeholder="{{'factory.englishAddress'|translate}}">
 
                 </div> 
 
                 <!--الهاتف-->
                  <div class="input-form">
                     <label class="input-form__label" for="phone-number">
-                        العنوان
+                       {{'factory.phone' |translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="phone-number" placeholder="رقم الهاتف">
+                    <input type="text" class="input-form__txt" id="phone-number" placeholder="{{'factory.phoneNumber' | translate}}">
 
                 </div> 
 
                 <!--فاكس-->
                  <div class="input-form">
                     <label class="input-form__label" for="fax-number">
-                        فاكس
+                        {{'factory.fax' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="fax-number" placeholder="رقم الفاكس">
+                    <input type="text" class="input-form__txt" id="fax-number" placeholder="{{'factory.faxNumber' | translate}}">
                 </div> 
 
                 <!--الموقع الالكترونى-->
                  <div class="input-form">
                     <label class="input-form__label" for="website">
-                        الموقع الالكترونى
+                        {{'factory.webSite' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="website" placeholder="الموقع الالكترونى">
+                    <input type="text" class="input-form__txt" id="website" placeholder="{{'factory.webSite' | translate}}">
                 </div> 
 
                 <!--البريد الالكترونى-->
                  <div class="input-form">
                     <label class="input-form__label" for="email">
-                        البريد الالكترونى
+                        {{'factory.emailAddress' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="email" placeholder="البريد الالكترونى">
+                    <input type="text" class="input-form__txt" id="email" placeholder="{{'factory.emailAddress' | translate}}">
                 </div> 
 
                 <!--اسم مسئول التواصل-->
                  <div class="input-form">
                     <label class="input-form__label" for="communication-person-name-arabic">
-                        اسم مسئول التواصل
+                        {{'factory.contactPersonHeader'| translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="communication-person-name-arabic" placeholder="اسم مسئول التواصل باللغة العربية">
-                    <input type="text" class="input-form__txt" id="communication-person-name-english" placeholder="اسم مسئول التواصل باللغة الانجليزية">
+                    <input type="text" class="input-form__txt" id="communication-person-name-arabic" placeholder="{{'factory.contactPersonNameArabic'|translate}}">
+                    <input type="text" class="input-form__txt" id="communication-person-name-english" placeholder="{{'factory.contactPersonNameEnglish' |translate}}">
                 </div> 
 
                 <!--المسمى الوظيفى-->
                  <div class="input-form">
                     <label class="input-form__label" for="job-title-arabic">
-                        اسم مسئول التواصل
+                        {{'factory.jobTitle' | translate}}
                     </label>
-                    <input type="text" class="input-form__txt" id="job-title-arabic" placeholder="المسمى الوظيفى باللغة العربية">
-                    <input type="text" class="input-form__txt" id="job-title-english" placeholder="المسمى الوظيفى باللغة الانجليزية">
+                    <input type="text" class="input-form__txt" id="job-title-arabic" placeholder="{{'factory.arabicJobTitle' | translate}}">
+                    <input type="text" class="input-form__txt" id="job-title-english" placeholder="{{'factory.englishJobTitle' | translate}}">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class="submit-btn-container">
-                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded p-btn" >اضف مصنعك</button>
+                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded p-btn" >{{'AddFactory'|translate}}</button>
                 </div>
             </div>
         </div>
@@ -132,12 +132,12 @@
     <!--Footer Site map -->
     <div class="site-map-container ">
         <ul class="site-map-list">
-            <li class="site-map-tab"><a href="#">الصفحة الرئيسية</a></li>
-            <li class="site-map-tab"><a href="#">عن البوابة </a></li>
-            <li class="site-map-tab"><a href="#">الاقسام الصناعية</a></li>
-            <li class="site-map-tab"><a href="#">الرعاة المشاركون</a></li>
-            <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
-            <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
+            <li class="site-map-tab"><a href="#">{{'homePage' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'About' | translate}} </a></li>
+            <li class="site-map-tab"><a href="#">{{'IndustrialDepartments' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'sponsors' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'AddFactory' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'ContactUs'| translate}}</a></li>
         </ul>
     </div>
     <!--Footer Contact info-->
