--- a/src/app/pages/factory-details/factory-details.component.html
+++ b/src/app/pages/factory-details/factory-details.component.html
@@ -4,7 +4,7 @@
     <div class="page-banner-container">
         <div class="page-banner-content-container">
             <img class="page-banner__image" src="../assets/images/c1.jpg">
-            <h2 class="page-banner__header">عن البوابة</h2>
+            <h2 class="page-banner__header">{{'IndustrialDepartments'|translate}}</h2>
         </div>
     </div>
 </div>
@@ -76,7 +76,7 @@
 
                   <div class="person-details-box">
                       <div class="person-contact-header-container">
-                          <h3 class="person__contact-header"> التواصل التجارى</h3>
+                          <h3 class="person__contact-header"> {{'CommercialCommunication'| translate}}</h3>
                       </div>
                     <div class="person-image-container">
                         <img class="person__img" src="../assets/images/c1.jpg" alt="person">
@@ -100,7 +100,7 @@
 
                   <div class="branches-box">
                     <div class="branch-txt-container">
-                        <h3 class="branch__txt"> الفروع</h3>
+                        <h3 class="branch__txt"> {{'branches'|translate}}</h3>
                     </div>
                     <ul class="branches-info-container">
 
@@ -133,7 +133,7 @@
 
              <div class="products-catalog-container">
                   <div class="product-catalog-header-container">
-                      <h3 class="product-catalog-header__txt">كتالوج المنتجات</h3>
+                      <h3 class="product-catalog-header__txt">{{'productsCatalog' | translate}}</h3>
                     </div>
                     <catalog-slider></catalog-slider>
                      <div class="category-details-container">
@@ -184,12 +184,12 @@
     <!--Footer Site map -->
     <div class="site-map-container ">
         <ul class="site-map-list">
-            <li class="site-map-tab"><a href="#">الصفحة الرئيسية</a></li>
-            <li class="site-map-tab"><a href="#">عن البوابة </a></li>
-            <li class="site-map-tab"><a href="#">الاقسام الصناعية</a></li>
-            <li class="site-map-tab"><a href="#">الرعاة المشاركون</a></li>
-            <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
-            <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
+            <li class="site-map-tab"><a href="#">{{'homePage' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'About' | translate}} </a></li>
+            <li class="site-map-tab"><a href="#">{{'IndustrialDepartments' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'sponsors' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'AddFactory' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'ContactUs'| translate}}</a></li>
         </ul>
     </div>
     <!--Footer Contact info-->
