--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -27,7 +27,7 @@
 
     <div class="industrial-sector-details" >
         <div class="industrial-sector-header-container">
-            <h3 class="industrial-sector__header-txt">القطاعات الصناعية</h3>
+            <h3 class="industrial-sector__header-txt">{{'IndustrialDepartments' | translate}}</h3>
         </div>
         <muilt-rows-slider></muilt-rows-slider>
     </div>
@@ -55,7 +55,7 @@
 <!--about Section -->
  <section class="about-portal">
    <div class="section-header-container ">
-    <h3 class="headers-txt headers-txt--green mb-0">عن البوابه</h3>
+    <h3 class="headers-txt headers-txt--green mb-0">{{'About' | translate}}</h3>
    </div>
    <div class="container">
     <div class="row">
@@ -78,7 +78,7 @@
                     وشركات التأمين وشركات النقل والتخليص الجمركى.
                 </p>
                 <div class="read-more-container">
-                    <button  class="btn--trasnparent btn-txt--green btn--lit-rounded read-more read-more-btn">المزيد</button>
+                    <button  class="btn--trasnparent btn-txt--green btn--lit-rounded read-more read-more-btn">{{'more'|translate}}</button>
                 </div>
             
         </div>
@@ -87,7 +87,7 @@
 </section>
 <!--sponsers banner section-->
 <section class="section-header-container">
-    <h3 class="headers-txt headers-txt--black">الرعاة المشاركون</h3>
+    <h3 class="headers-txt headers-txt--black">{{'sponsors' | translate}}</h3>
 </section>
 
 
@@ -106,12 +106,12 @@
     <!--Footer Site map -->
     <div class="site-map-container ">
         <ul class="site-map-list">
-            <li class="site-map-tab"><a href="#">الصفحة الرئيسية</a></li>
-            <li class="site-map-tab"><a href="#">عن البوابة </a></li>
-            <li class="site-map-tab"><a href="#">الاقسام الصناعية</a></li>
-            <li class="site-map-tab"><a href="#">الرعاة المشاركون</a></li>
-            <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
-            <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
+            <li class="site-map-tab"><a href="#">{{'homePage' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'About' | translate}} </a></li>
+            <li class="site-map-tab"><a href="#">{{'IndustrialDepartments' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'sponsors' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'AddFactory' | translate}}</a></li>
+            <li class="site-map-tab"><a href="#">{{'ContactUs'| translate}}</a></li>
         </ul>
     </div> 
     <!--Footer Contact info-->
@@ -134,6 +134,6 @@
     </div>
     <!--copyRight-->
      <div class="copy-rights-container">
-        <span class="copy-rihts-txt">© جميع الحقوق محفوظة 2019 </span>
+        <span class="copy-rihts-txt">{{'copyRights' | translate}} </span>
     </div>
 </footer> 
