--- a/src/app/slides-carousel/slides-carousel.component.html
+++ b/src/app/slides-carousel/slides-carousel.component.html
@@ -44,7 +44,7 @@
     </ngb-carousel>
 
     <div class="search-input">
-        <input type="text" placeholder="بحث" class="search-input-field">
+        <input type="text" placeholder="{{'search' | translate}}" class="search-input-field">
         <button  class="search-btn"><span class="icon-Icon-Search"></span></button>
     </div>
 </div>
