--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <li class="nav-tab " routerLinkActive="active"><a routerLink="/AddFactory">{{'AddFactory' | translate}}</a></li>
     <li class="nav-tab " routerLinkActive="active"><a routerLink="/ContactUs">{{'ContactUs' | translate}}</a></li>
 </ul>
-<button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher" (click)="switchLang('en')">{{'lang'|translate}}</button>
+<button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher" (click)="switchLang()">{{'lang'|translate}}</button>
 
 </div>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
             <a class="nav-link " routerLink="/ContactUs">{{'ContactUs' | translate}}</a>
           </li>
           <li class="nav-item">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="switchLang('en')">{{'lang'|translate}}</button>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="switchLang()">{{'lang'|translate}}</button>
           </li>
 
         </ul>
