fixing location of css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" [href]='cssUrl'>
+<!-- <link rel="stylesheet" [href]='cssUrl'> -->
  
 <nav class="nav-bar custom-toggler">
    
